[gd_scene load_steps=5 format=3 uid="uid://c3xsraeg0wpln"]

[ext_resource type="Script" uid="uid://djryv5q0gsn6t" path="res://content/other/chest.gd" id="1_vvc5f"]
[ext_resource type="Texture2D" uid="uid://bmyfi2t4kf7mx" path="res://assets/chest/closed_chest.png" id="2_p2sbf"]
[ext_resource type="PackedScene" uid="uid://c52aht0fne1ud" path="res://content/effects/win_particles.tscn" id="3_qi3fc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gaelh"]
size = Vector2(12, 12)

[node name="Chest" type="Area2D"]
script = ExtResource("1_vvc5f")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_p2sbf")
region_rect = Rect2(0, 0, 16, 16)

[node name="Timer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gaelh")

[node name="WinParticles" parent="." instance=ExtResource("3_qi3fc")]
visible = false

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
